--- a/tanguy-morvan/package.json
+++ b/tanguy-morvan/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "@sanity/client": "^6.26.0",
     "@sanity/icons": "^3.5.7",
     "@sanity/image-url": "^1.1.0",
