--- a/tanguy-morvan/package.json
+++ b/tanguy-morvan/package.json
@@ -21,6 +21,7 @@
     "next-seo": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-masonry-css": "^1.0.16",
     "sanity": "^3.71.0",
     "styled-components": "^6.1.14"
   },
